@@ -1,3 +1,6 @@
+original IDLE ChangeLog:
+========================
+
 Tue Feb 15 18:08:19 2000  Guido van Rossum  <guido@cnri.reston.va.us>
 
 	* NEWS.txt: Notice status bar and stack viewer.
